# IDMA

./: .gitignore  CLAUDE.md  Codex 1차 자동빌드 결과물.md  HOWTOUSE.md  README.md  pyproject.toml  제출물 관리 자동화 PRD v1.0.0.md  제출물관리자동화.spec
.claude/skills/prd-writer/: SKILL.md
.claude/skills/srs-writer/: SKILL.md
.codex/skills/prd-writer/references/: prd-template.md
.codex/skills/prd-writer/scripts/: validate.py
.codex/skills/srs-writer/references/: srs-template.md
.codex/skills/srs-writer/scripts/: validate.py
docs/: Codex 1차 자동빌드 결과물.md  제출물 관리 자동화 PRD v1.0.0.md
src/app/: __init__.py  main.py
src/app/adapters/: __init__.py  adapter_example.py  ai_client.py  config_loader.py  excel_repo.py  file_ops.py  file_watcher.py  logger.py  project_doc_classifier.py  폴더설명.md
src/app/core/: __init__.py  entities.py  logic.py  phase_resolver.py  rule_engine.py  usecases.py  validation.py
src/app/models/: __init__.py  ai.schema.json  app.config.yaml  config_schema.py  ledger.config.yaml  model_example.py  quality.rules.yaml  문서 목록.json  폴더설명.md
src/app/ui/: __init__.py  settings_window.py
src/app/utils/: __init__.py  helpers.py  폴더설명.md
src/python_project_template.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_basic.py  test_excel_repo.py  test_file_ops.py  test_logger.py  test_project_doc_classifier.py  test_rule_engine.py  test_usecases.py  test_validation.py
