# pyproject.toml
# - 파이썬 버전
# - 라이브러리 목록
# - 프로젝트 설정
# 👉 “이 프로젝트 설명서”

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-project-template"
version = "0.1.0"
description = "A reusable Python project template"
authors = [ { name = "Your Name" } ]
requires-python = ">=3.8"
dependencies = []

[tool.pytest.ini_options]
minversion = "6.0"
